Main page complete

--- a/index.html
+++ b/index.html
@@ -9,27 +9,138 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+  <!-- Link Style -->
+  <style>
+  a:link {
+      color: white;
+      background-color: transparent;
+      text-decoration: none;
+  }
+  a:visited {
+      color: white;
+      background-color: transparent;
+      text-decoration: none;
+  }
+  a:hover {
+      color: red;
+      background-color: transparent;
+      text-decoration: underline;
+  }
+  a:active {
+      color: yellow;
+      background-color: transparent;
+      text-decoration: underline;
+  }
+  </style>
 </head>
 
-<body>
-<div class="parallax-container">
-   <div class="parallax"><img src="images/background1.jpg"></div>
+<body bgcolor="#4fc3f7">
+
+    <div class="row container">
+      <h2 class="header">Hi! I'm Ryan!</h2>
+      <h5> In the beginning (well middle beginning)...</h5>
+      <p class="grey-text text-darken-3 lighten-3"> I started my college career like most young adults; not caring
+        in the slightest about school or grades. I was living on my own for the first time and completely absorbed
+        in the addictive freedoms of unsupervised adolescent life. I decided to follow my best friend to Gainesville,
+        FL and attend school at Santa Fe Community College. I started working full time and going to school part time
+        within about 6 months. A year and a half later, I switched my major for the fourth time and was sporting a 1.8
+        GPA. At some point I decided a change had to be made.</p>
+    </div>
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center white-text">Change you say?</h1>
+        <div class="row center">
+          <h5 class="header col s12 white-text"> <font size="6">What change could possibly straighten out a 20 year old college flunky...</font></h5>
+        </div>
+        <div class="row center">
+          <a href="http://www.marines.com/home" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">The change</a>
+        </div>
+        <br><br>
+      </div>
+    </div>
+
+   <div class="parallax"><img src="images/003.jpg"></div>
  </div>
- <div class="section white">
-   <div class="row container">
-     <h2 class="header">Parallax</h2>
-     <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+
+   <!--div class="clear container">
+     <h2 class="header">Professional Ryan</h2>
+     <p class="grey-text text-darken-3 lighten-3"></p>
+   </div-->
+
+   <div class="row">
+     <div class="col s12 m6">
+       <div class="icon-block">
+         <h2 class="center orange-text"><i class="material-icons">trending_up</i></h2>
+         <h5 class="center">Professional Ryan</h5>
+         <p class="light">Change wasn't easy. I spent four (4) years in the United States Marine Corps and exited as
+            a Sergeant (E5). After my military adventure was complete, I became a government contractor with L-3
+            Communications. I worked there for three (3) years and eventually became a Project Manager. Once I finished
+            my AA degree I decided to go back to school full time at the University of FLorida.
+            <a href="resume.html">Online Resume</a> </p>
+       </div>
+     </div>
+
+     <div class="col s12 m6">
+       <div class="icon-block">
+         <h2 class="center orange-text"><i class="material-icons">library_books</i></h2>
+         <h5 class="center">Educated Ryan</h5>
+         <p class="light"> I always felt lost when I would think of who or what I wanted to be "when I grew up."
+           At first I wanted to major in pure mathematics. Then after realizing there wasn't a lot of demand for
+           that sort of major I started thinking about engineering. I have always been a bit of a computer nerd and
+           decided to major in Computer Engineering. <a href="http://www.ufl.edu/">University of Florida</a></p>
+       </div>
+     </div>
    </div>
- </div>
+
  <div class="parallax-container">
-   <div class="parallax"><img src="images/background2.jpg"></div>
+   <div class="parallax"><img src="images/002.jpg"></div>
  </div>
-
- <!--  Scripts-->
- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
- <script src="js/materialize.js"></script>
- <script src="js/init.js"></script>
-
  </body>
+
+   <footer class="page-footer blue lighten-2">
+     <div class="container">
+       <div class="row">
+         <div class="col l6 s12">
+           <h5 class="white-text">Programing Languages</h5>
+           <p class="grey-text text-lighten-4">While I do not consider myself a master programmer. There are a few
+           languages I have had experience with throughout my academic career.</p>
+
+
+         </div>
+         <div class="col l3 s12">
+           <h5 class="white-text">Programming</h5>
+           <ul>
+             <li class = "white-text">C / C++</li>
+             <li class = "white-text">Java / JavaScript</li>
+             <li class = "white-text">HTML</li>
+           </ul>
+         </div>
+         <div class="col l3 s12">
+           <h5 class="white-text">Database Management</h5>
+           <ul>
+             <li class = "white-text">Oracle</li>
+             <li class = "white-text">MongoDB</li>
+             <li class = "white-text">R</li>
+           </ul>
+         </div>
+       </div>
+     </div>
+     <div class="footer-copyright">
+       <div class="container">
+       Made by Ryan Bell using <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+       </div>
+     </div>
+   </footer>
+
+
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+
 
 </html>
