trying to upload resume page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </style>
 </head>
 
-<body bgcolor="#4fc3f7">
+<body bgcolor="#b3e5fc">
 
     <div class="row container">
       <h2 class="header">Hi! I'm Ryan!</h2>
@@ -91,7 +91,7 @@
          <p class="light"> I always felt lost when I would think of who or what I wanted to be "when I grew up."
            At first I wanted to major in pure mathematics. Then after realizing there wasn't a lot of demand for
            that sort of major I started thinking about engineering. I have always been a bit of a computer nerd and
-           decided to major in Computer Engineering. <a href="http://www.ufl.edu/">University of Florida</a></p>
+           decided Computer Engineering was right for me! <a href="http://www.ufl.edu/">University of Florida</a></p>
        </div>
      </div>
    </div>
