Webpage Final build

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             a Sergeant (E5). After my military adventure was complete, I became a government contractor with L-3
             Communications. I worked there for three (3) years and eventually became a Project Manager. Once I finished
             my AA degree I decided to go back to school full time at the University of FLorida.
-            <a href="resume.html">Online Resume</a> </p>
+            <a href="resume/index.html">Online Resume</a> </p>
        </div>
      </div>
 
@@ -123,6 +123,7 @@
            <h5 class="white-text">Database Management</h5>
            <ul>
              <li class = "white-text">Oracle</li>
+             <li class = "white-text">MongoDB</li>
              <li class = "white-text">MongoDB</li>
              <li class = "white-text">R</li>
            </ul>
