Webpage Final build

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
              <li class = "white-text">C / C++</li>
              <li class = "white-text">Java / JavaScript</li>
              <li class = "white-text">HTML</li>
+             <li class = "white-text">SQL</li>
            </ul>
          </div>
          <div class="col l3 s12">
